--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
 	"name": "RUMIWIFI",
 	"version": "1.6.7.2",
-	"description": "Переводчик китайской прошивки Xiaomi роутера. Работает офлайн. Не требует настрйки.",
+	"description": "Переводчик китайской прошивки Xiaomi роутера. Работает офлайн. Не требует настройки.",
 	"short_name": "RUMIWIFI русификатор",
 
 	"icons": { "16": "img/icon_16.png",
