--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
 	"manifest_version": 2,
 
 	"name": "RUMIWIFI",
-	"version": "1.6.7.2",
+	"version": "1.6.73",
 	"description": "Переводчик китайской прошивки Xiaomi роутера. Работает офлайн. Не требует настройки.",
-	"short_name": "RUMIWIFI русификатор",
+	"short_name": "RUMIWIFI русификатор Xiaomi роутера",
 
 	"icons": { "16": "img/icon_16.png",
 		"48": "img/icon_48.png",
